--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -10,9 +10,10 @@
     <script src="JS/P5/addons/p5.sound.min.js"></script>
 
     <!-- alle gebruikte klasses hebben hun eigen bestand -->
-    <script src='JS/class/Bal.js'></script>
-    <script src='JS/class/Doel.js'></script>
-    <script src='JS/class/Ring.js'></script>
+    <script src='JS/class/Bommen.js'></script>
+    <script src='JS/class/Raster.js'></script>
+    <script src='JS/class/Schermen.js'></script>
+    <script src='JS/class/Speler.js'></script>
 
     <!-- Dit is het bestand met het hoofdprogramma -->
     <script src='JS/mijnGame.js'></script>
