--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -14,6 +14,7 @@
     <script src='JS/class/Raster.js'></script>
     <script src='JS/class/Schermen.js'></script>
     <script src='JS/class/Speler.js'></script>
+    <script src='JS/class/Spel.js'></script>
 
     <!-- Dit is het bestand met het hoofdprogramma -->
     <script src='JS/mijnGame.js'></script>
