--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -9,11 +9,12 @@
     <script src="JS/P5/addons/p5.shape.js"></script>
     <script src="JS/P5/addons/p5.sound.min.js"></script>
 
-    <!-- alle gebruikte klasses hebben hun eigen bestand -->
+    <!-- alle gebruikte klasses hebben hun eigen bestand 
     <script src='JS/class/Bommen.js'></script>
-    <script src='JS/class/Raster.js'></script>
+    
     <script src='JS/class/Schermen.js'></script>
-    <script src='JS/class/Speler.js'></script>
+    <script src='JS/class/Speler.js'></script> -->
+    <script src='JS/class/Raster.js'></script>
     <script src='JS/class/Spel.js'></script>
 
     <!-- Dit is het bestand met het hoofdprogramma -->
