--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -10,10 +10,11 @@
     <script src="JS/P5/addons/p5.sound.min.js"></script>
 
     <!-- alle gebruikte klasses hebben hun eigen bestand 
-    <script src='JS/class/Bommen.js'></script>
+    <script src='JS/class/Schermen.js'></script> -->
+    <script src='JS/class/Bom.js'></script>
     
-    <script src='JS/class/Schermen.js'></script>
-    <script src='JS/class/Speler.js'></script> -->
+
+    <script src='JS/class/Speler.js'></script>
     <script src='JS/class/Raster.js'></script>
     <script src='JS/class/Spel.js'></script>
 
