--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -17,6 +17,7 @@
     <script src='JS/class/Speler.js'></script>
     <script src='JS/class/Bom.js'></script>
     <script src='JS/class/Beloning.js'></script>
+    <script src='JS/class/Beginscherm.js'></script>
 
     <!-- Dit is het bestand met het hoofdprogramma -->
     <script src='JS/mijnGame.js'></script>
