--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -12,12 +12,13 @@
 
     <!-- alle gebruikte klasses hebben hun eigen bestand -->
 
-    <script src='JS/class/Spel.js'></script>
-    <script src='JS/class/Raster.js'></script>
-    <script src='JS/class/Speler.js'></script>
-    <script src='JS/class/Bom.js'></script>
-    <script src='JS/class/Beloning.js'></script>
+    <!-- <script src='JS/OUD_class/Spel.js'></script>
+    <script src='JS/OUD_class/Raster.js'></script>
+    <script src='JS/OUD_class/Speler.js'></script>
+    <script src='JS/OUD_class/Bom.js'></script>
+    <script src='JS/OUD_class/Beloning.js'></script> -->
     <script src='JS/class/Beginscherm.js'></script>
+    <script src='JS/class/Klikken.js'></script>
 
     <!-- Dit is het bestand met het hoofdprogramma -->
     <script src='JS/mijnGame.js'></script>
