--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="CSS/myGame.css">
     <script src="JS/P5/p5.min.js"></script>
+
+
     
     <!-- extra libraries -->
     <script src="JS/P5/addons/p5.shape.js"></script>
@@ -24,5 +26,12 @@
     <script src='JS/mijnGame.js'></script>
   </head>
   <body>
+
+        <!-- The text field -->
+        <input type="text" value="Hello World" id="myInput"> 
+        
+        <!-- The button used to copy the text -->
+        <button onclick="myFunction()">CODE</button> 
+
   </body>
 </html>
