--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -28,10 +28,10 @@
   <body>
 
         <!-- The text field -->
-        <input type="text" value="Hello World" id="myInput"> 
+        <!-- <input type="text" value="Hello World" id="myInput">  -->
         
         <!-- The button used to copy the text -->
-        <button onclick="myFunction()">CODE</button> 
+        <!-- <button onclick="myFunction()">CODE</button> -->
 
   </body>
 </html>
