--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -32,6 +32,6 @@
         
         <!-- The button used to copy the text -->
         <!-- <button onclick="myFunction()">CODE</button> -->
-
+    <div id="code"></div>
   </body>
 </html>
