--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -29,9 +29,12 @@
 
         <!-- The text field -->
         <!-- <input type="text" value="Hello World" id="myInput">  -->
-        
+        <!-- <input type="text" value = "kopiëren" id="code"> -->
+       
         <!-- The button used to copy the text -->
         <!-- <button onclick="myFunction()">CODE</button> -->
-    <div id="code"></div>
+
+        <div id="code"></div>
+
   </body>
 </html>
