--- a/mijnGame/index.html
+++ b/mijnGame/index.html
@@ -24,8 +24,12 @@
 
     <!-- Dit is het bestand met het hoofdprogramma -->
     <script src='JS/mijnGame.js'></script>
+
   </head>
   <body>
         <div id="code"></div>
+        <!-- <div id="codeKopie"></div> 
+        <input type="button" onclick="copyOnClick()" value="Copy" /> -->
+
   </body>
 </html>
